fix: improve palette path label color for readability

--- a/ui/xournalpp.css
+++ b/ui/xournalpp.css
@@ -173,6 +173,17 @@ notebook frame>label {
     font-weight: bold;
 }
 
+/*
+ * Labels only used for palette path information right now
+ */
+.secondary-label {
+	color: #444;
+}
+
+window.darkMode .secondary-label {
+	color: #ddd;
+}
+
 
 /*
   Sidebar (page select, layer select, etc)
@@ -188,3 +199,4 @@ window.darkMode #sidebarContents {
 menubar, toolbar {
     -GtkWidget-window-dragging: false
 }
+
